[gd_scene load_steps=4 format=2]

[ext_resource path="res://Turret.gd" type="Script" id=1]
[ext_resource path="res://obstacles/guns/turret/clipart2761458.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 515.536

[node name="Turret" type="Node2D"]
script = ExtResource( 1 )

[node name="Position2DStartOfProyectile" type="Position2D" parent="."]
position = Vector2( 0, 11.6261 )

[node name="Area2DDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DDetection"]
shape = SubResource( 1 )

[node name="TimerShootingCD" type="Timer" parent="."]
wait_time = 2.0

[node name="clipart2761458" type="Sprite" parent="."]
position = Vector2( -0.794861, -13.2477 )
rotation = 3.14159
texture = ExtResource( 2 )
vframes = 3
hframes = 8
frame = 20
[connection signal="body_entered" from="Area2DDetection" to="." method="_on_Area2DDetection_body_entered"]
[connection signal="body_exited" from="Area2DDetection" to="." method="_on_Area2DDetection_body_exited"]
[connection signal="timeout" from="TimerShootingCD" to="." method="_on_TimerShootingCD_timeout"]
